# VCGen

./: Cargo.toml  README.md  foo.csv
scripts/: inspector.py  install_prereqs.bash  requirements.txt  vcgen_excel.py
src/: config.rs  lib.rs  main.rs  utils.rs
src/dataset/: mod.rs  vulnerabilities.rs
src/git/: mod.rs  search.rs  vulnerability.rs
src/vulnerability/: analyzer.rs  mod.rs  tools.rs
