[package]
name = "vcgen"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
octocrab = "0.16.0"
tokio = { version = "1.19.2", features = ["rt-multi-thread", "macros"] }
git2 = "0.14.4"
tempfile = "3.3.0"
indicatif = "0.16.2"
regex = "1"
polars = { version = "0.22.8", features = ["json"] }